# examplepy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
infra/db/: create-db.sql
infra/db/migrations/schema/: V0__assign_default_permissions.sql  V1__assign_default_readonly_permissions.sql  V2__create_records_table.sql
scripts/: aws-setup.py  flyway-migrate.py
src/: main.py
tests/: test_sqs_consumer.py
